--- a/UppercaseCounter/UppercaseCounter/UppercaseCounter.csproj
+++ b/UppercaseCounter/UppercaseCounter/UppercaseCounter.csproj
@@ -59,10 +59,11 @@
   <ItemGroup>
     <Content Include="Default.aspx" />
     <Content Include="ErrorMessage.html" />
+    <Content Include="Main.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TextAnalyzer.cs" />
+    <Compile Include="Model\TextAnalyzer.cs" />
     <Compile Include="Default.aspx.cs">
       <DependentUpon>Default.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
